--- a/config.json
+++ b/config.json
@@ -219,12 +219,12 @@
                 [100000,200000,100000,10]
             ],
             "game_options":[
-                {"title":"참여", "text":"촬영권 10장"},
-                {"title":"최대 엔트리", "text":"14"},
-                {"title":"스타팅칩", "text":"70,000"},
+                {"title":"참여", "text":"촬영권 10장 or 15장"},
+                {"title":"최대 엔트리", "text":"25"},
+                {"title":"스타팅칩", "text":"80,000"},
                 {"title":"리엔트리", "text":"100,000"},
                 {"title":"레지마감", "text":"2break(13레벨)"},
-                {"title":"블라인드", "text":"8분"}
+                {"title":"블라인드", "text":"10분"}
             ],
             "giveaway":[
             ]
@@ -295,15 +295,14 @@
                 [150000,300000,300000,10]
             ],
             "game_options":[
-                {"title":"참여", "text":"10장 촬영권"},
+                {"title":"참여", "text":"20장 촬영권"},
                 {"title":"경기방식", "text":"리엔트리"},
-                {"title":"최대 엔트리", "text":"120"},
+                {"title":"최대 엔트리", "text":"90"},
                 {"title":"블라인드", "text":"15분/10분"},
                 {"title":"레지마감", "text":"3break(17레벨전)"},
                 {"title":"스타팅 칩", "text":"60,000"},
                 {"title":"예약자", "text":"10,000 추가"},
                 {"title":"lv.4이전 참가", "text":"10,000 추가"},
-                {"title":"애드온", "text":"150,000"},
                 {"title":"리엔트리", "text":"100,000"}
             ],
             "giveaway":[
