--- a/config.json
+++ b/config.json
@@ -259,7 +259,7 @@
             ]
         },
         {
-            "name":"AK & 액시스 콜라보 대회",
+            "name":"액시스 이벤트 대회",
             "display_name":"AK & 액시스 콜라보 대회",
             "data":[
                 [100,200,0,15],
@@ -286,11 +286,12 @@
                 [20000,40000,40000,10],
                 [30000,60000,60000,10],
                 [40000,80000,80000,10],
+                [-2,-1,0,5],
                 [50000,100000,100000,10],
                 [60000,120000,120000,10],
-                [-2,-1,0,5],
+                [70000,140000,140000,10],
                 [80000,160000,160000,10],
-                [100000,200000,200000,10],
+                [-2,-1,0,5],
                 [120000,240000,240000,10],
                 [150000,300000,300000,10]
             ],
