--- a/config.json
+++ b/config.json
@@ -260,7 +260,7 @@
         },
         {
             "name":"액시스 이벤트 대회",
-            "display_name":"AK & 액시스 콜라보 대회",
+            "display_name":"액시스 이벤트 대회",
             "data":[
                 [100,200,0,15],
                 [200,400,0,15],
